<resources>
    <string name="app_name">Arbuz.kz</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="clear">Clear</string>
    <string name="your_order_was_successfully">Your order was successfully!</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>